@@ -80,6 +80,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25387: Check return value of winsound.MessageBeep.
+
 - Issue #27866: Add SSLContext.get_ciphers() method to get a list of all
   enabled ciphers.
 
